--- a/angular.json
+++ b/angular.json
@@ -32,8 +32,12 @@
                 "input": "public"
               }
             ],
-            "styles": [,
-  "node_modules/swiper/swiper-bundle.min.css", "src/assets/scss/tailwind.scss", "src/assets/scss/_index.scss", "src/styles.scss"],
+            "styles": [
+              "src/assets/scss/_index.scss",
+              "node_modules/swiper/swiper-bundle.min.css",
+              "src/assets/scss/tailwind.scss",
+              "src/styles.scss"
+            ],
             "scripts": []
           },
           "configurations": {
